realized that the graphic design setion didn't align with the other sections so had to fix that

--- a/Portfolio Website/css/portfoliostyle.css
+++ b/Portfolio Website/css/portfoliostyle.css
@@ -7,10 +7,12 @@ body{
 }
 
 /*
+
 div{
     outline: 1px solid lime;
 }
 */
+
 
 /* Header Section */
 .header{
@@ -160,12 +162,16 @@ div{
 .aa{
     max-width: 900px;
     height: 240px;
-    float:left;
 }
 .aa img{
     height:180px;
     margin-left:30px;
     margin-bottom: 50px;
+    float:left;
+}
+
+.aa img:first-of-type{
+    margin-left: 20px;
 }
 
 /*Help Campaign*/
@@ -176,7 +182,7 @@ div{
 
 .hc1{
     width:271px;
-    margin-left: 30px;
+    margin-left: 20px;
     margin-bottom: 50px;
     float:left;
 }
@@ -194,7 +200,7 @@ div{
 
 .hc2{
     width:270px;
-    margin-left: 24px;
+    margin-left: 20px;
     margin-bottom: 50px;
     float: left;
 }
@@ -209,13 +215,16 @@ div{
     height:270px;
     margin-left: 20px;
     margin-bottom: 50px;
+    float:left;
 }
 
 /*Brochure*/
+
 .brochure img{
     width: 270px;
     margin-left: 20px;
     margin-bottom:  50px;
+    float:left;
 }
 
 /*Photography Section*/
